[GStreamer][DMABuf] Disable DMABufVideoSink when lacking texture_rg https://bugs.webkit.org/show_bug.cgi?id=279439

Reviewed by NOBODY (OOPS!).

The DMABuf video sink has now superseded GLsink. However in its current
implementation it creates R8 GL_TEXTURE_2D textures, therefore introducing
an implicit dependency on texture_rg, rendering DMABuf video sink
unsuitable for legacy GPUs not supporting
GL_EXT_texture_rg/GL_ARB_texture_rg/OpenGL 3.0+.

This patch disables DMABufVideoSink when texture_rg is unavailable,
causing a fallback to the legacy implementation on affected devices.

* Source/WebCore/platform/graphics/egl/GLContext.cpp:
(WebCore::GLContext::glExtensions const): cache texture_rg extension
support
* Source/WebCore/platform/graphics/egl/GLContext.h: texture_rg extension
  support declarations
* Source/WebCore/platform/graphics/gstreamer/DMABufVideoSinkGStreamer.cpp:
(webKitDMABufVideoSinkIsEnabled): Disable DMABufVideoSink when
texture_rg is unavailable